--- a/index.html
+++ b/index.html
@@ -1,30 +1,76 @@
-<html lang="fr"><head></head><body>```html
-
-
-
+```html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
   <meta charset="UTF-8">
-  <title>GAZO WORLD</title>
+  <title>GAZO WORLD - INITIATION</title>
   <style>
     body {
-      background: black;
-      color: lime;
+      background-color: black;
+      color: #00ff00;
       font-family: monospace;
-      text-align: center;
-      padding-top: 100px;
+      font-size: 1.2em;
+      padding: 20px;
+      overflow: hidden;
 }
-    h1 {
-      font-size: 4em;
-      animation: pulse 1.5s infinite;
+
+    #output {
+      white-space: pre-wrap;
+      animation: blink 1s step-end infinite;
 }
-    @keyframes pulse {
-      0%, 100% { opacity: 1;}
+
+    @keyframes blink {
       50% { opacity: 0.4;}
 }
+
+.matrix-bg {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-image: url('https://raw.githubusercontent.com/ManzDev/cursos-assets/main/animated-stars.gif');
+      opacity: 0.15;
+      pointer-events: none;
+      z-index: -1;
+}
   </style>
+</head>
+<body>
+  <div class="matrix-bg"></div>
+  <div id="output"></div>
 
+  <script>
+    const lines = [
+      "> Connexion à GAZO WORLD...",
+      "> Chargement des modules cybernétiques...",
+      "> Sécurisation du serveur dans:",
+      "10", "9", "8", "7", "6", "5", "4", "3", "2", "1", "...",
+      "> ACCÈS REFUSÉ — Système verrouillé.",
+      "> Fin de session. 🔒"
+    ];
 
-  <h1>🌐 GAZO WORLD 🌐</h1>
-  <p>&gt; Connexion au serveur... accès restreint</p>
+    let i = 0;
+    const output = document.getElementById("output");
 
+    function typeLine() {
+      if (i < lines.length) {
+        const line = lines[i];
+        let j = 0;
+        const interval = setInterval(() => {
+          if (j < line.length) {
+            output.innerHTML += line[j];
+            j++;
+} else {
+            clearInterval(interval);
+            output.innerHTML += "\n";
+            i++;
+            setTimeout(typeLine, 600);
+}
+}, 50);
+}
+}
 
-```</body></html>
+    window.onload = typeLine;
+  </script>
+</body>
+</html>
+```
