--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 ```html
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>GAZO WORLD - INITIATION</title>
-  <style>
+   <h1 onclick="document.getElementById('sound').play(); window.location.href='infiltration.html'">GAZO WORLD</h1>
+   ```
     body {
       background-color: black;
       color: #00ff00;
