--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Cyber Dash - GAZO Edition</title>
+  <title>Cyber Dash – GAZO Edition</title>
   <style>
     body {
       margin: 0;
-      background: url('assets/background.jpg') no-repeat center center fixed;
+      background: url('https://i.postimg.cc/8PH5XhcP/IMG-20250312-152913-579.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: monospace;
       overflow: hidden;
@@ -32,7 +32,7 @@
 }
 
     #player {
-      background-image: url('assets/player.png');
+      background-image: url('https://i.postimg.cc/8PH5XhcP/IMG-20250312-152913-579.jpg');
       bottom: 0;
       left: 180px;
 }
@@ -150,4 +150,5 @@
 }, 1400);
   </script>
 </body>
-</html>```
+</html>
+```
