--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 }
 
     #player {
-      background-image: url('https://i.postimg.cc/8PH5XhcP/IMG-20250312-152913-579.jpg');
+      background-image: url('https://i.postimg.cc/zf8NdCSc/gazo-agent-run.gif');
       bottom: 0;
       left: 180px;
 }
@@ -143,7 +143,8 @@
           if (!gameOver) {
             updateObstacle(obs);
 } else {
-            clearInterval(interval);
+
+clearInterval(interval);
 }
 }, 30);
 }
@@ -151,4 +152,5 @@
   </script>
 </body>
 </html>
+```
 ```
