--- a/index.html
+++ b/index.html
@@ -3,154 +3,60 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Cyber Dash – GAZO Edition</title>
+  <title>CyberDash - Accès Système</title>
   <style>
     body {
-      margin: 0;
-      background: url('https://i.postimg.cc/8PH5XhcP/IMG-20250312-152913-579.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: monospace;
-      overflow: hidden;
+      background-color: #000;
       color: #00ff00;
-}
-
-    #game {
-      position: relative;
-      width: 400px;
-      height: 400px;
-      margin: 50px auto;
-      border: 2px solid lime;
-      background: rgba(0, 0, 0, 0.6);
-}
-
-    #player,.obstacle {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background-size: contain;
-      background-repeat: no-repeat;
-}
-
-    #player {
-      background-image: url('https://i.postimg.cc/zf8NdCSc/gazo-agent-run.gif');
-      bottom: 0;
-      left: 180px;
-}
-
-.obstacle {
-      background-image: url('https://i.postimg.cc/8PH5XhcP/IMG-20250312-152913-579.jpg');
-}
-
-    #score {
-      text-align: center;
-      font-size: 1.2em;
-      margin-top: 20px;
-}
-
-    #message {
-      text-align: center;
-      font-size: 2em;
-      color: red;
-      margin-top: 20px;
-}
-
-    #restart {
-      display: none;
-      margin: 20px auto;
-      padding: 10px 20px;
       font-family: monospace;
+      text-align: center;
+      padding-top: 100px;
+      overflow: hidden;
+}
+
+    h1 {
+      font-size: 2.5em;
+      animation: blink 1s infinite;
+}
+
+    p {
+      font-size: 1.2em;
+      margin-top: 30px;
+}
+
+    @keyframes blink {
+      0% { opacity: 1;}
+      50% { opacity: 0.3;}
+      100% { opacity: 1;}
+}
+
+    #enter {
+      margin-top: 50px;
+      padding: 10px 30px;
+      font-size: 1em;
       font-weight: bold;
-      background: lime;
+      background-color: lime;
       color: black;
       border: none;
       cursor: pointer;
 }
 
-    #restart:hover {
-      background: #66ff66;
+    #enter:hover {
+      background-color: #66ff66;
+}
+
+    footer {
+      margin-top: 100px;
+      font-size: 0.8em;
+      color: #009900;
 }
   </style>
 </head>
 <body>
-  <div id="game">
-    <div id="player"></div>
-  </div>
-  <div id="score">Score: 0</div>
-  <div id="message"></div>
-  <button id="restart" onclick="location.reload()">Rejouer</button>
-
-  <script>
-    const game = document.getElementById("game");
-    const player = document.getElementById("player");
-    const scoreDisplay = document.getElementById("score");
-    const message = document.getElementById("message");
-    const restartBtn = document.getElementById("restart");
-
-    let playerX = 180;
-    let score = 0;
-    let gameOver = false;
-
-    function movePlayer(x) {
-      if (gameOver) return;
-      playerX += x;
-      playerX = Math.max(0, Math.min(360, playerX));
-      player.style.left = playerX + "px";
-}
-
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowLeft") movePlayer(-20);
-      if (e.key === "ArrowRight") movePlayer(20);
-});
-
-    function createObstacle() {
-      const obstacle = document.createElement("div");
-      obstacle.classList.add("obstacle");
-      obstacle.style.left = Math.floor(Math.random() * 360) + "px";
-      obstacle.style.top = "0px";
-      game.appendChild(obstacle);
-      return obstacle;
-}
-
-    function updateObstacle(obstacle) {
-      let top = parseInt(obstacle.style.top);
-      obstacle.style.top = (top + 4) + "px";
-
-      const obsX = parseInt(obstacle.style.left);
-      const obsY = top + 40;
-      if (
-        obsX < playerX + 40 &&
-        obsX + 40> playerX &&
-        obsY> 360
-) {
-        gameOver = true;
-        message.textContent = "💥 GAME OVER — SCORE: " + score;
-        restartBtn.style.display = "block";
-}
-
-      if (top> 400) {
-        game.removeChild(obstacle);
-        if (!gameOver) {
-          score++;
-          scoreDisplay.textContent = "Score: " + score;
-}
-}
-}
-
-    setInterval(() => {
-      if (!gameOver) {
-        const obs = createObstacle();
-        const interval = setInterval(() => {
-          if (!gameOver) {
-            updateObstacle(obs);
-} else {
-
-clearInterval(interval);
-}
-}, 30);
-}
-}, 1400);
-  </script>
+  <h1>> INITIATION CYBERDASH</h1>
+  <p>Connexion en cours...<br>Agent GAZO identifié<br>Simulation prête</p>
+  <button id="enter" onclick="window.location.href='game.html'">🎮 Entrer dans le système</button>
+  <footer>Propulsé par GAZO WORLD – Prototype v1.0</footer>
 </body>
 </html>
-```
 ```
