--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>GAZO INFILTRATION OPS – Mission 01</title>
+  <meta charset="UTF-8">
+  <title>GAZO OPS – Mission 02</title>
   <style>
     body {
-      background-color: #000;
+      background: #000;
       color: #0f0;
       font-family: monospace;
       text-align: center;
@@ -18,87 +18,103 @@
     td {
       width: 40px;
       height: 40px;
-      border: 1px solid #333;
-      text-align: center;
+      border: 1px solid #222;
 }
-.agent {
-      background-color: lime;
-}
-.guard {
-      background-color: red;
-}
-.vision {
-      background-color: rgba(255, 0, 0, 0.3);
-}
-.terminal {
-      background-color: cyan;
-}
-    #status {
-      font-size: 1.2em;
-      margin-top: 20px;
-}
+.agent { background-color: lime;}
+.guard  { background-color: red;}
+.terminal { background-color: cyan;}
+.vision { background-color: rgba(255,0,0,0.3);}
+    #status { margin-top: 20px; font-size: 1.2em;}
   </style>
 </head>
 <body>
-  <h1>Mission 01: Terminal Noir</h1>
-  <p>⬅️ Utilise les flèches du clavier pour te déplacer<br>🖥️ Appuie sur [P] devant le terminal pour pirater</p>
+  <h1>Mission 02: Extraction</h1>
+  <p>⬅️ Flèches pour bouger | 🖥️ Appuie sur [E] devant le terminal</p>
+  <div>⏱️ Temps restant: <span id="timer">45</span>s</div>
   <table id="grid"></table>
-  <div id="status">Progression: 0%</div>
+  <div id="status">Avance sans te faire repérer</div>
 
   <script>
     const size = 9;
-    const grid = document.getElementById("grid");
-    const status = document.getElementById("status");
-    let pos = { x: 0, y: 4}; // Départ à gauche centre
+    const agent = { x: 0, y: 4};
     const terminal = { x: 8, y: 4};
-    const guards = [{ x: 4, y: 4}];
-    let hacked = false;
+    const guard = { x: 4, y: 0, dir: 1};
+    let hacked = false, over = false, time = 45;
 
-    // Génère la grille
-    function drawGrid() {
+    const grid = document.getElementById("grid");
+    const timer = document.getElementById("timer");
+    const status = document.getElementById("status");
+
+    function draw() {
       grid.innerHTML = "";
       for (let y = 0; y < size; y++) {
         const row = document.createElement("tr");
         for (let x = 0; x < size; x++) {
           const cell = document.createElement("td");
-          if (x === pos.x && y === pos.y) cell.className = "agent";
+          if (x === agent.x && y === agent.y) cell.className = "agent";
+          else if (x === guard.x && y === guard.y) cell.className = "guard";
           else if (x === terminal.x && y === terminal.y) cell.className = "terminal";
-          else if (guards.some(g => g.x === x && g.y === y)) cell.className = "guard";
-          else if (guards.some(g => g.x - 1 <= x && x <= g.x + 1 && g.y === y)) cell.className = "vision";
+          else if ((x === guard.x && Math.abs(y - guard.y) <= 1) ||
+                   (y === guard.y && Math.abs(x - guard.x) <= 1)) {
+            cell.className = "vision";
+}
           row.appendChild(cell);
 }
         grid.appendChild(row);
 }
 }
 
-    function updateStatus() {
-      if (pos.x === terminal.x && pos.y === terminal.y && hacked) {
-        status.textContent = "✅ Terminal piraté — Mission réussie!";
-} else if (
-        guards.some(g => g.x - 1 <= pos.x && pos.x <= g.x + 1 && g.y === pos.y)
-) {
-        status.textContent = "💥 Tu as été repéré — Mission échouée.";
-} else {
-        const progress = Math.round((pos.x / terminal.x) * 100);
-        status.textContent = "Progression: " + progress + "%";
+    function moveGuard() {
+      guard.y += guard.dir;
+      if (guard.y === 0 || guard.y === size - 1) guard.dir *= -1;
+}
+
+    function checkStatus() {
+      if (over) return;
+      if (agent.x === guard.x && Math.abs(agent.y - guard.y) <= 1 ||
+          agent.y === guard.y && Math.abs(agent.x - guard.x) <= 1) {
+        status.textContent = "💥 Tu as été repéré!";
+        over = true;
+} else if (agent.x === terminal.x && agent.y === terminal.y && hacked) {
+        status.textContent = "✅ Données extraites avec succès!";
+        over = true;
 }
 }
 
     document.addEventListener("keydown", (e) => {
-      if (status.textContent.includes("Mission")) return;
-      if (e.key === "ArrowLeft" && pos.x> 0) pos.x--;
-      if (e.key === "ArrowRight" && pos.x < size - 1) pos.x++;
-      if (e.key === "ArrowUp" && pos.y> 0) pos.y--;
-      if (e.key === "ArrowDown" && pos.y < size - 1) pos.y++;
-      if (e.key.toLowerCase() === "p" && pos.x === terminal.x && pos.y === terminal.y) {
+      if (over) return;
+      if (e.key === "ArrowLeft" && agent.x> 0) agent.x--;
+      if (e.key === "ArrowRight" && agent.x < size - 1) agent.x++;
+      if (e.key === "ArrowUp" && agent.y> 0) agent.y--;
+      if (e.key === "ArrowDown" && agent.y < size - 1) agent.y++;
+      if (e.key.toLowerCase() === "e" && agent.x === terminal.x && agent.y === terminal.y) {
         hacked = true;
 }
-      drawGrid();
-      updateStatus();
+      draw();
+      checkStatus();
 });
 
-    drawGrid();
-    updateStatus();
+    setInterval(() => {
+      if (!over) {
+        moveGuard();
+        draw();
+        checkStatus();
+}}, 700);
+
+    const countdown = setInterval(() => {
+      if (!over) {
+        time--;
+        timer.textContent = time;
+        if (time <= 0) {
+          status.textContent = "⏱️ Temps écoulé. Mission échouée.";
+          over = true;
+}
+} else {
+        clearInterval(countdown);
+}
+}, 1000);
+
+    draw();
   </script>
 </body>
 </html>
